test/types/file/freadNoInt.good
freadNoInt.chpl:4: error: bad format in channel.read(inout a:int(64)) with path "freadNoInt.txt" offset 0
